adding social midia

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body * {
 #container {
   width: 360px;
   margin: 56px auto 0px;
+  padding: 0 24px;
 }
 
 #profile {
@@ -41,16 +42,44 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  padding: 24px 0;
 }
- 
+
 ul li a {
   display: flex;
+  text-decoration: none;
   align-items: center;
   justify-content: center;
   padding: 16px 24px;
   background: rgba(255, 255, 255, 0.1);
-  border:1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 8px;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  font-weight: 500;
+  transition: background 0.2s;
+}
+ul li a:hover {
+  background: rgba(255, 255, 255, 0.05);
+  border: 1.5px solid white;
+}
+
+/* ! Social-links */
+footer #social-links {
+  display: flex;
+  font-size: 24px;
+  justify-content: center;
+  padding: 24px 0;
+}
+
+footer #social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 50%;
+  transition: background .3s;
+}
+footer #social-links a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
