--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 * {
-  padding: 0% 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+:root {
+  --text-color: white;
+  --bg-url: url(assets/bg-mobile.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.5);
+}
+.light {
+  --text-color: black;
+  --bg-url: url(assets/bg-mobile-light.jpg);
 }
 
 body {
   /* background */
-  background: url(assets/bg-mobile.jpg) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center/cover;
 }
 
 body * {
   font-family: "Inter", sans-serif;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 #container {
@@ -61,25 +71,33 @@ ul li a {
 }
 ul li a:hover {
   background: rgba(255, 255, 255, 0.05);
-  border: 1.5px solid white;
+  border: 1.5px solid var(--text-color);
 }
 
 /* ! Social-links */
-footer #social-links {
+#social-links {
   display: flex;
   font-size: 24px;
   justify-content: center;
   padding: 24px 0;
 }
 
-footer #social-links a {
+#social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 16px;
   border-radius: 50%;
-  transition: background .3s;
+  transition: background 0.3s;
 }
-footer #social-links a:hover {
+#social-links a:hover {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* ! footer */
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
 }
