light and dark mode style complete

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ body * {
 #profile {
   text-align: center;
   padding: 24px;
-
   padding-bottom: 10px;
 }
 
@@ -74,9 +73,14 @@ body * {
   position: absolute;
   border-radius: 50%;
   top: 50%;
-  right: 0;
+  left: 0;
   z-index: 1;
   transform: translateY(-50%);
+}
+
+.light #switch button {
+  left: initial;
+  right: 0;
 }
 
 #switch span {
