--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body * {
   position: relative;
   width: 64px;
   margin: 4px auto;
+  cursor: pointer;
 }
 
 #switch button {
@@ -74,6 +75,7 @@ body * {
   border-radius: 50%;
   top: 50%;
   left: 0;
+  cursor: pointer;
   z-index: 1;
   transform: translateY(-50%);
 }
