--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 :root {
   --text-color: white;
   --bg-url: url(assets/bg-mobile.jpg);
+  --bg-desktop-url: url(assets/bg-desktop.jpg);
   --switch-bg-url: url(assets/moon-stars.svg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color-hover: rgba(255, 255, 255, 0.05);
@@ -21,6 +22,15 @@
   --surface-color-hover: rgba(0, 0, 0, 0.2);
   --surface-color: rgba(0, 0, 0, 0.1);
   --highligth-color: rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 500px) {
+  :root {
+    --bg-url: url(assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(assets/bg-desktop-light.jpg);
+  }
 }
 
 body {
