--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   --highligth-color: rgba(0, 0, 0, 0.1);
 }
 /* ! Change the backgound when its change to mobile */
-@media screen and (min-width: 500px) {
+@media (min-width: 690px) {
   :root {
     --bg-url: url(assets/bg-desktop.jpg);
   }
@@ -34,8 +34,9 @@
 }
 
 body {
-  /* background */
+  height: 100vh;
   background: var(--bg-url) no-repeat top center/cover;
+  overflow: hidden;
 }
 
 body * {
@@ -44,9 +45,10 @@ body * {
 }
 
 #container {
-  width: 360px;
+  max-width: 550px;
   margin: 56px auto 0px;
   padding: 0 24px;
+  min-width: 200px;
 }
 /* ! Profile */
 
