--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@
   --highligth-color: rgba(0, 0, 0, 0.1);
 }
 /* ! Change the backgound when its change to mobile */
-
+ 
 body {
-  /* height: 100vh; */
+  height: 100vh;
   background: var(--bg-url) no-repeat top center/cover;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 body * {
@@ -41,7 +41,6 @@ body * {
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
- 
 }
 /* ! Profile */
 
@@ -72,6 +71,7 @@ body * {
 }
 
 #switch button {
+  animation: slide-back 0.3s;
   width: 32px;
   height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
@@ -86,8 +86,7 @@ body * {
 }
 
 .light #switch button {
-  left: initial;
-  right: 0;
+  animation: slide-in 0.3s forwards;
 }
 
 #switch span {
@@ -98,6 +97,10 @@ body * {
   border: 1px solid var(--stroke-color);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highligth-color);
 }
 
 /* ! Links */
@@ -163,5 +166,24 @@ footer {
   }
   .light {
     --bg-url: url(assets/bg-desktop-light.jpg);
+  }
+}
+
+/* ! Animations */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
